# code_clone_in_agent_md

./: .gitignore  1_main_ai_config.py  2_filter_by_language.py  3_run_omniccg.py  4_get_comments_from_prs.py  NEW_README.md  README.md  RQs.md  analyze_ai_config.py  analyze_ai_config_csv.py  clone_terms_report.json  main.py  main_ai_config.py  main_github_api.py  md_commit_history.py  pyproject.toml  resolve_submodule_failures.py  run_omniccg.py  search_agents_md.py  usage_example.py
omniccg/: CloneClass.py  CloneFragment.py  CloneVersion.py  Lineage.py  clean_cs_code.py  clean_py_code.py  clean_rb_code.py  cli.py  clone_density.py  code_operations.py  compute_time.py  core.py  folders_paths.py  git_operations.py  hash_operations.py  prints_operations.py  utils.py
omniccg/tools/NiCad/config/: default.cfg
omniccg/tools/NiCad/tools/: cloneclasses.x  clonepairs.x  crossclones.x  getnormsource.x  getsource.x  splitclasses.x  streamprocess.x  tohtmlpairs.x
omniccg/tools/NiCad/txl/: atl-extract-functions.x  atl-rename-blind-functions.x  atl.x  c-abstract-blocks.x  c-abstract-files.x  c-abstract-functions.x  c-extract-blocks.x  c-extract-files.x  c-extract-functions.x  c-filter-blocks.x  c-filter-files.x  c-filter-functions.x  c-rename-blind-blocks.x  c-rename-blind-files.x  c-rename-blind-functions.x  c-rename-consistent-blocks.x  c-rename-consistent-files.x  c-rename-consistent-functions.x  c.x  cs-abstract-blocks.x  cs-abstract-files.x  cs-abstract-functions.x  cs-extract-blocks.x  cs.x  (+91 more)
results/: agents_md_report.md  agents_md_results.csv  agents_md_results.json
