[tool.poetry]
name = "code-clone-in-agents-md"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

requests = ">=2.32.5,<3.0.0"
gitpython = ">=3.1.45,<4.0.0"
matplotlib = ">=3.10.7,<4.0.0"
pandas = ">=2.3.3,<3.0.0"
pyarrow = ">=22.0.0,<23.0.0"
python-dotenv = ">=1.0.0,<2.0.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
